Viewport: Camera Limits visible when overlays are turned off #72353

Closed
opened 2019-12-11 14:21:01 +01:00 by Jeroen Bakker · 3 comments
Member

System Information
Operating system: Linux-5.0.0-37-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits
Graphics card: Radeon RX Vega ATI Technologies Inc. 4.5.13572 Core Profile Context 5.0.73.19.30

Blender Version
Broken: version: 2.82 (sub 5), branch: Unknown, commit date: Unknown Unknown, hash: rBUnknown
Worked: version 2.81a (overlay refactoring introduced this regression)

Short description of error
Camera Limits are still visible, when overlays are turned off and the viewport looks through the camera.

image.png

Exact steps for others to reproduce the error

  • Start Blender
  • Select The Camera
  • Enable the Limits in the Viewport Display section of the camera
  • in the 3d viewport look throught the active camera (View->Camera->Active Camera)
  • Disable the overlays
**System Information** Operating system: Linux-5.0.0-37-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits Graphics card: Radeon RX Vega ATI Technologies Inc. 4.5.13572 Core Profile Context 5.0.73.19.30 **Blender Version** Broken: version: 2.82 (sub 5), branch: Unknown, commit date: Unknown Unknown, hash: `rBUnknown` Worked: version 2.81a (overlay refactoring introduced this regression) **Short description of error** Camera Limits are still visible, when overlays are turned off and the viewport looks through the camera. ![image.png](https://archive.blender.org/developer/F8209054/image.png) **Exact steps for others to reproduce the error** * Start Blender * Select The Camera * Enable the `Limits` in the Viewport Display section of the camera * in the 3d viewport look throught the active camera (View->Camera->Active Camera) * Disable the overlays
Author
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Jeroen Bakker self-assigned this 2019-12-11 14:21:30 +01:00

This issue was referenced by 2a35383bb0

This issue was referenced by 2a35383bb0b49dd7a7ee0c507ec012372587f6e5
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72353
No description provided.